# fastapi-cookbook

./: .gitignore  README.md  main.py  pyproject.toml
src/: containers.py  database.py
src/migrations/: env.py
src/migrations/versions/: 2025_11_15_2131-7bdc1ad370a3_add_user_table.py  2025_11_15_2205-2b5dad61052b_modify_updated_ai_to_updated_at.py  2025_11_15_2207-ba572372b5a3_modify_password_type_string_32_to_.py
src/user/application/: user_service.py
src/user/domain/: user.py
src/user/domain/repository/: user_repo.py
src/user/infra/db_models/: user.py
src/user/infra/repository/: user_repo.py
src/user/interface/controllers/: user_controller.py
src/utils/: crypto.py  db_utils.py
