[project]
name = "fastapi-cookbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.11"
dependencies = [
    "fastapi==0.111.0",
    "flake8>=7.3.0",
    "passlib[bcrpyt,bcrypt]>=1.7.4",
    "py-ulid>=1.0.3",
    "uvicorn[standard]==0.30.1",
]