[project]
name = "fastapi-cookbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.11"
dependencies = [
    "alembic>=1.17.2",
    "cryptography>=46.0.3",
    "dependency-injector>=4.48.2",
    "fastapi==0.111.0",
    "flake8>=7.3.0",
    "mysqlclient>=2.2.7",
    "passlib>=1.7.4",
    "py-ulid>=1.0.3",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]==0.30.1",
]
